@startuml

class CarPark {
    id: Long
    longitude: Double
    latitude: Double
    name: String
}

class ParkingSpot {
    id: Long
    carPark: CarPark
    available: Boolean
    owner: Person
}

class Person {
    customerId: Long
    firstName: String
    lastName: String
    licensePlate: String
}

CarPark "1" -- "*" ParkingSpot
ParkingSpot "1" -- "0..1" Person

@enduml
